feat: improve human resouces using STI
