# storage/docs/api-docs.json
@@ -2621,11 +2621,6 @@
                     "type": "integer",
                     "format": "int32"
                 },
-                "agency_type_id": {
-                    "description": "agency_type_id",
-                    "type": "integer",
-                    "format": "int32"
-                },
                 "created_at": {
                     "description": "created_at",
                     "type": "string",
@@ -2756,11 +2751,52 @@
                 }
             }
         },
+        "HRType": {
+            "required": [
+                "name",
+                "unit_id"
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "name": {
+                    "description": "name",
+                    "type": "string"
+                },
+                "description": {
+                    "description": "description",
+                    "type": "string"
+                },
+                "unit_id": {
+                    "description": "unit_id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
         "HumanResource": {
             "required": [
                 "quantity",
-                "item_id",
-                "agency_id"
+                "hr_type_id",
+                "implementing_patner_id"
             ],
             "properties": {
                 "id": {
@@ -2783,6 +2819,10 @@
                     "type": "number",
                     "format": "number"
                 },
+                "description": {
+                    "description": "description",
+                    "type": "string"
+                },
                 "meta": {
                     "description": "meta",
                     "type": "string"
@@ -2792,13 +2832,56 @@
                     "type": "integer",
                     "format": "int32"
                 },
-                "item_id": {
-                    "description": "item_id",
+                "hr_type_id": {
+                    "description": "hr_type_id",
                     "type": "integer",
                     "format": "int32"
                 },
-                "agency_id": {
-                    "description": "agency_id",
+                "implementing_partner_id": {
+                    "description": "implementing_partner_id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
+        "ImplementingPartner": {
+            "required": [
+                "name",
+                "website",
+                "focal_person_id",
+                "agency_type_id"
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "name": {
+                    "description": "name",
+                    "type": "string"
+                },
+                "website": {
+                    "description": "website",
+                    "type": "string"
+                },
+                "focal_person_id": {
+                    "description": "focal_person_id",
                     "type": "integer",
                     "format": "int32"
                 },
